# paf21-2

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  TopDownView.py  ac  detector  gp  lp  op  package.xml  paf.cfg.rviz  requirements.md  rules  score  start  start-no-rules  tb  tdv
CRDesigner Modified Files/: README.md  commonroad_scenario_designer_gui.py  commonroad_viewer.py  road_network_toolbox.py  road_network_toolbox_ui.py
CRDesigner_Modified_Files/: README.md  commonroad_scenario_designer_gui.py  commonroad_viewer.py  road_network_toolbox.py  road_network_toolbox_ui.py
Docs/paf_acting/backwards/: braking.md  reverse.md
Maps/: README.md
Maps/No Rules/: DEU_Town01-1_1_T-1.xml  DEU_Town02-1_1_T-1.xml  DEU_Town07-1_1_T-1.xml  DEU_Town10HD-1_1_T-1.xml
Maps/No Rules/Town01 Zwischenschritte Backups/: DEU_Town01(Cafe)-1_1_T-1.xml  DEU_Town01(fußgangerbruecke)-1_1_T-1.xml  DEU_Town01-1_1_T-1.xml  DEU_Town1a-1_1_T-1.xml  DEU_Town1b-1_1_T-1.xml  DEU_Town1c-1_1_T-1.xml  DEU_Town1d-1_1_T-1.xml
Maps/No Rules/Town02 NC backup/: AKTUELLDEU_Town02-1_1_T-1.xml  DEU_Town02-1_1_T-1.xml  DEU_Town02backupLastFix-1_1_T-1.xml  DEU_Town02backupLastFixA-1_1_T-1.xml  NEUEABBIEGESPURDEU_Town02-1_1_T-1.xml
Maps/No Rules/Town07 backups/: DEU_Town07-1_1_T-1.xml  DEU_Town07A-1_1_T-1.xml  DEU_Town07B-1_1_T-1.xml  DEU_Town07D-1_1_T-1.xml  DEU_Town07E-1_1_T-1.xml  DEU_Town07F-1_1_T-1.xml  DEU_Town07G-1_1_T-1.xml  DEU_Town07H-1_1_T-1.xml  DEU_Town07lastShortcut-1_1_T-1.xml
Maps/Rules/: DEU_Town01-1_1_T-1.xml  DEU_Town02-1_1_T-1.xml  DEU_Town02-1_1_T-1_new.xml  DEU_Town02-1_1_T-1_test.xml  DEU_Town07-1_1_T-1.xml
docs/paf_acting/backwards/: braking.md  test.ipynb
docs/psaf2020_overview/: Alter Code - Validierung.pptx  PAF_Sprint1_Global_Planning.pptx  Towns Vergleich.pptx
local_planner/src/: listener.cpp  server.cpp  talker.cpp
maps/Rules/: Town01.xml  Town02.xml
paf_ros/: paf_local_planner  rosbridge_config.yaml
paf_ros/helper_functions/: CMakeLists.txt  package.xml  readme.md  setup.py
paf_ros/helper_functions/src/: helper_functions.py
paf_ros/local_planner/: CMakeLists.txt  package.xml
paf_ros/local_planner/launch/: local_planner.launch
paf_ros/local_planner/src/: client.cpp
paf_ros/local_planner/srv/: GetNextCoordinates.srv
paf_ros/map_manager/: CMakeLists.txt  README.md  Town03.xml  TownTest.xml  commonroad_viewer.py  landmark_provider.py  map_manager.py  map_provider.py  map_supervisor_common_roads.py  package.xml  psaf1_map_supervisor_with_saving_xml.py
paf_ros/map_manager/CR Scenarios/: DEU_Town01-1_1_T-1.xml  DEU_Town07-1_1_T-1.xml  DEU_Town10HD-1_1_T-1.xml
paf_ros/map_manager/Debug FIles/: errors.txt
paf_ros/map_manager/Debug Files/: landmarks.txt
paf_ros/map_manager/XML files psaf1/: Town01.xml  Town02.xml  Town07.xml  Town10HD.xml
paf_ros/paf_actor/: CMakeLists.txt  README.md  package.xml  setup.py
paf_ros/paf_actor/launch/: paf_actor.launch
paf_ros/paf_actor/src/paf_actor/: cublic_spline.py  helper_functions.py  lat_vel_control.py  model_predictive_control.py  new_stanley_control.py  pid_control.py  sliding_window_control.py  spline.py  stanley_control.py  vehicle_control.py
paf_ros/paf_global_planner/: CMakeLists.txt  package.xml  setup.py
paf_ros/paf_global_planner/launch/: paf_global_planner.launch
paf_ros/paf_global_planner/src/: paf_global_planner.py
paf_ros/paf_local_planner/: CMakeLists.txt  README.md  ReadMe.md  package.xml
paf_ros/paf_local_planner/launch/: paf_local_planner.launch  paf_local_planner_starter.launch
paf_ros/paf_local_planner/src/: paf_local_planner.py
paf_ros/paf_local_planner/src/classes/: SpeedCalculator.py
paf_ros/paf_map_manipulation/: CMakeLists.txt  README.md  map_manipulation.py  package.xml
paf_ros/paf_messages/: CMakeLists.txt  package.xml
paf_ros/paf_messages/msg/: LocalPath.msg  PafCombinedCameraImage.msg  PafDetectedTrafficLights.msg  PafLanelet.msg  PafLaneletMatrix.msg  PafLaneletRoute.msg  PafLocalPath.msg  PafLogImage.msg  PafLogScalar.msg  PafLogText.msg  PafObstacle.msg  PafObstacleFollowInfo.msg  PafRouteSection.msg  PafRoutingGraphNode.msg  PafRoutingRequest.msg  PafSpeedMsg.msg  PafTopDownViewPointSet.msg  PafTrafficSignal.msg
paf_ros/paf_messages/srv/: PafLaneInfoService.srv  PafRoutingRequest.srv  PafRoutingService.srv
paf_ros/paf_perception/: CMakeLists.txt  README.md  package.xml  sensors.json  setup.py
paf_ros/paf_perception/launch/: segmented_lidar.launch  semantic_lidar.launch  traffic_light_detector.launch
paf_ros/paf_perception/models/: download-link_for_weights  psaf2019_classes.csv  psaf2019_yolo.cfg  (+5 more)
paf_ros/paf_planning/: CMakeLists.txt  README.md  package.xml  setup.py
paf_ros/paf_planning/launch/: paf_global_planner.launch  paf_local_planner.launch  paf_obstacle_planner.launch
paf_ros/paf_planning/src/: CRDrivabilityChecker.py  paf_global_planner.py  paf_local_planner.py  paf_obstacle_planner.py  test.py
paf_ros/paf_planning/src/classes/: CRDrivabilityChecker.py  GlobalPath.py  HelperFunctions.py  LocalPath.py  MapManager.py  PafRoute.py  README.md  SpeedCalculator.py  Spline.py  Test.py
paf_ros/paf_sensor_preprocessing/: CMakeLists.txt  README.md  package.xml  setup.py
paf_ros/paf_starter/: CMakeLists.txt  global_parameters.yaml  package.xml
paf_ros/paf_test_Sebi/: DEU_Hhr-1_1.xml  ZAM_Tutorial-1_1_T-1.xml  ZAM_Urban-2_1_change.xml  cm_test.py
paf_ros/paf_validation/: CMakeLists.txt  README.md  package.xml  parameters.yaml  setup.py
paf_ros/validation/: CMakeLists.txt  README.md  package.xml  parameters.yaml
paf_ros_package_template/paf_starter/: package.xml  setup.py
scripts/: README.md  build-ros.sh  build_ros.sh  commonroad_designer.sh  lp.sh  runscript.sh  setup.sh  tensorboard.sh  wait_for_window.sh
scripts/carla_scripts/: spawn_all.sh  spawn_parked_vehicle_in_front.py  spawn_vehicle.py  spawn_vehicle_in_front.py  spawn_vehicle_on_side.py
scripts/subscripts/: _set_python_executable.sh  _setup_carla.sh  _setup_commonroad.sh  _setup_cuda_torch.sh  _setup_paf.sh  _setup_ros.sh  wait_for_window.sh
(+53 files in other folders)
