<?xml version="1.0"?>
<package>
  <name>paf_messages</name>
  <version>1.2.0</version>
  <description>The custom paf_messages package</description>
  <maintainer email="todo@todo.de">paf21-2</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
