<?xml version="1.0"?>
<package format="2">
  <name>paf_planning</name>
  <version>0.0.1</version>
  <description>The validation package serves testing validation purposes only and is not required at runtime
  </description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nik.nowoczyn@uni-a.de">Julin Nowoczyn</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>paf_messages</build_depend>
  <build_export_depend>paf_messages</build_export_depend>
  <exec_depend>paf_messages</exec_depend>
  <export/>
</package>
